--- a/ShAI_BootCamp_Assignment.ipynb
+++ b/ShAI_BootCamp_Assignment.ipynb
@@ -253,7 +253,7 @@
     "    # 'Status': object\n",
     "}\n",
     "\n",
-    "df = pd.read_csv('Salaries.csv', dtype=dtype_dict, on_bad_lines='skip')\n",
+    "df = pd.read_csv('/content/Salaries.csv', dtype=dtype_dict, on_bad_lines='skip')\n",
     "\n",
     "df.head()\n"
    ]
